added dark light mode toggling feature

--- a/css/main.css
+++ b/css/main.css
@@ -14,11 +14,11 @@
   --mainBorderColor-dark:#2b3031;
   --mainBgColor-dark:#131415;
 
-  --mainTextColor:var(--mainTextColor-dark);
-  --secondaryTextColor:var(--secondaryTextColor-dark);
-  --mainLinkColor:var(--mainLinkColor-dark);
-  --mainBorderColor:var(--mainBorderColor-dark);
-  --mainBgColor:var(--mainBgColor-dark);
+  --mainTextColor:var(--mainTextColor-light);
+  --secondaryTextColor:var(--secondaryTextColor-light);
+  --mainLinkColor:var(--mainLinkColor-light);
+  --mainBorderColor:var(--mainBorderColor-light);
+  --mainBgColor:var(--mainBgColor-light);
 }
 
 * {
@@ -162,5 +162,16 @@ color: var(--mainLinkColor);
   .card--work-history {
     border-left:none;
     padding-left: 0;
+  }
+
+  #toggle {
+    color: var(--mainTextColor);
+    background-color: var(--mainBgColor);
+    border: 2px dashed gold;
+  }
+
+  #toggle:hover {
+    color: var(--mainTextColor);
+    border: 2px dashed mediumblue;
   }
 }
